# scraper

./: README.md  pyproject.toml  scraper.ipynb  scraper.py  test_scraper.py
