[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["moh-ash96 <moh.ash96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.16"
bs4 = "^0.0.1"
requests = "^2.25.1"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
